# core

./: CMakeLists.txt  README.md  package.xml
action/: PlaygroundNavigation.action
cfg/: estimate_focus.cfg
config/: freeplay_sandbox_recordings.rviz  rgbd_replay.rviz  sandtray.rviz  sr300.cfg
launch/: attention_tracking_gscam.launch  attention_tracking_sandtray.launch  dual_attention_tracking.launch  dual_sr300.launch  dual_sr300_f200.launch  dual_sr300_f200_rgbd.launch  dual_sr300_rgbd.launch  interactive_playground.launch  play.launch  postprocess.launch  postprocess_record.launch  prepare_recording.launch  recompress_throttle_image.launch  record.launch  record_items_placement.launch  record_visual_tracking.launch  rgbd_replay.launch  run.launch  run_gscam.launch  sandtray.launch  visualfocus_calibration_gscam.launch  visualfocus_tracking_gscam.launch  woz_play.launch
meshes/: child-face.dae  sandtray.dae
msg/: AttentionTarget.msg  AttentionTargetsStamped.msg
nodes/: move_playground_items  move_sandbox_items  nao_behaviours  nao_playground_behaviours  play  sandtray_gaze_viz  tf_replicator.py  trajectory_tracker  woz_play  zones_from_image
src/: estimate_focus.cpp  main.cpp  map_and_plan.cpp  visualfocus_assessment.cpp
src/sandtray_localisation/: chilitagsdetector.cpp  chilitagsdetector.hpp  sandtray_localisation.cpp
srv/: ZooPlan.srv
urdf/: face.xacro  face_0.urdf  face_1.urdf  sandtray.urdf  sandtray.xacro
